ajustes no apllication properties e impementado flyway para versionamento do banco

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # DATASOURCE
-spring.datasource.url = jdbc:h2:file:${user.home}/data/sample;DB_CLOSE_ON_EXIT=FALSE;INIT=CREATE SCHEMA IF NOT EXISTS VIVO
+spring.datasource.url = jdbc:h2:file:${user.home}/data/sample;DB_CLOSE_DELAY=-1;
 spring.datasource.driverClassName = org.h2.Driver
 spring.datasource.username = sa
 spring.datasource.password = sa
@@ -16,7 +16,17 @@ spring.jpa.hibernate.ddl-auto = update
 jwt.expiracao=30
 jwt.chave-assinatura=cGFwYWkgbm9lbCBlc3RhIGVtIGNhc2E=
 
+# FLYWAY
+spring.flyway.url=jdbc:h2:file:${user.home}/data/sample;DB_CLOSE_DELAY=-1;
+spring.flyway.user=sa
+spring.flyway.password=sa
 
+spring.flyway.baselineVersion=1
+spring.flyway.baseline-on-migrate=false
+
+
+# MANAGENMENT ENDPOINTS
 management.endpoints.web.exposure.include=*
 
+# ANT-MATCHER
 spring.mvc.pathmatch.matching-strategy= ant_path_matcher
